Sidebar collapsed fix for different device size and section link icon changed.

--- a/engine/lithium/builder/ui.less
+++ b/engine/lithium/builder/ui.less
@@ -316,11 +316,11 @@ h3.form-divider {
 
     .action-btns{
       display: none;
-      position: absolute; top: 0; right: 0;
-      line-height: 39px;
+      position: absolute; top: 0; right: 4px;
+      line-height: 36px;
       background: darken(@bg-secondary, 1%);
       span{
-        padding:  0 2px;
+        padding:  0;
         margin: 0 3px;
       }
     }
@@ -714,5 +714,5 @@ h3.form-divider {
 body.op-sidebar-collapsed{
   #sections{ width: 100%; margin-left: 0; }
   .txop-sidebar,
-  .tx-nav-tabs{ left: -290px; }
+  .tx-nav-tabs{ left: -23%; }
 }
